# bldc

./: confgenerator.c  confgenerator.h  datatypes.h
applications/: app_nunchuk.c
vesc_foc_sim/: 2026_03_03.xml  CMakeLists.txt  README.md  can.md  doc.md  fsm.md  package.xml
vesc_foc_sim/config/: motor_params.yaml
vesc_foc_sim/include/vesc_foc_sim/: adapter.hpp  foc_math.hpp
vesc_foc_sim/launch/: sim.launch.py
vesc_foc_sim/src/: ecu_sim_node.cpp  foc_bridge.c  pmsm_plant_node.cpp  vesc_controller_node.cpp
